tests/positive/test_pointer_reference.veldanava
#Pre_Descent Primordial_Regalia
#Beginning_Eden

Sanction:
    print();
;

genesis func main():
    genesis let i32 x = 11;
    genesis let ptr i32 p = &x;
    genesis let ref i32 r = &x;
    genesis print(*p);
    genesis print(r);
    genesis *p = 13;
    genesis print(x);
;
