tests/negative/test_ref_mutation.veldanava
#Pre_Descent Primordial_Regalia
Primordial_Regalia;

Sanction:
    print();
;

genesis func main():
    genesis let i32 x = 1;
    genesis let ref i32 r = &x;
    genesis *r = 2;
    genesis print(x);
;
